[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scene/UI/Floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/UI/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Scene/UI/button/OptionSprite/OptionHover.png" type="Texture" id=3]
[ext_resource path="res://karma future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scene/UI/button/PlaySprite/PlayNormal.png" type="Texture" id=5]
[ext_resource path="res://Scene/UI/button/PlaySprite/PlayPush.png" type="Texture" id=6]
[ext_resource path="res://Scene/UI/button/PlaySprite/PlayHover.png" type="Texture" id=7]
[ext_resource path="res://Scene/UI/button/OptionSprite/OptionPush.png" type="Texture" id=8]
[ext_resource path="res://Scene/UI/button/OptionSprite/OptionNormal.png" type="Texture" id=9]
[ext_resource path="res://Scene/UI/button/CreditSprite/CreditNormal.png" type="Texture" id=10]
[ext_resource path="res://Scene/UI/button/ExitSprite/QuitPush.png" type="Texture" id=11]
[ext_resource path="res://Scene/UI/button/CreditSprite/CreditHover.png" type="Texture" id=12]
[ext_resource path="res://Scene/UI/button/ExitSprite/QuitNormal.png" type="Texture" id=13]
[ext_resource path="res://Scene/UI/Mouse_cursor.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 3
font_data = ExtResource( 4 )

[node name="Node2D" type="Node"]
script = ExtResource( 2 )

[node name="Floor" parent="." instance=ExtResource( 1 )]
position = Vector2( 128.021, 39.8046 )
tile_data = PoolIntArray( -524272, 78, 0, -262153, 78, 0, -196617, 78, 0, -131081, 78, 0, -65545, 78, 0, -65540, 81, 0, -65539, 81, 0, -65538, 81, 0, -65537, 81, 0, -131072, 81, 0, -131071, 81, 0, -131070, 81, 0, -131069, 81, 0, -131068, 81, 0, -131067, 81, 0, -131066, 81, 0, -131065, 81, 0, -131064, 81, 0, -131063, 81, 0, -131062, 81, 0, -131061, 81, 0, -131060, 81, 0, -131059, 81, 0, -131058, 81, 0, -131057, 81, 0, -9, 78, 0, -4, 9, 1, -3, 9, 1, -2, 9, 1, -1, 9, 1, -65536, 9, 1, -65535, 9, 1, -65534, 9, 1, -65533, 9, 1, -65532, 9, 1, -65531, 9, 1, -65530, 9, 1, -65529, 9, 1, -65528, 9, 1, -65527, 9, 1, -65526, 9, 1, -65525, 9, 1, -65524, 9, 1, -65523, 9, 1, -65522, 9, 1, -65521, 9, 1, 65527, 78, 0, 65532, 6, 0, 65533, 6, 1, 65534, 6, 1, 65535, 6, 1, 0, 6, 1, 1, 6, 1, 2, 6, 1, 3, 6, 1, 4, 6, 1, 5, 6, 1, 6, 6, 1, 7, 6, 1, 8, 6, 1, 9, 6, 1, 10, 6, 1, 11, 6, 1, 12, 6, 1, 13, 6, 1, 14, 6, 1, 15, 6, 2, 131063, 78, 0, 131068, 9, 3, 131069, 9, 3, 131070, 9, 3, 131071, 9, 3, 65536, 9, 3, 65537, 9, 3, 65538, 9, 3, 65539, 9, 3, 65540, 9, 3, 65541, 9, 3, 65542, 9, 3, 65543, 9, 3, 65544, 9, 3, 65545, 9, 3, 65546, 9, 3, 65547, 9, 3, 65548, 9, 3, 65549, 9, 3, 65550, 9, 3, 65551, 9, 3, 196599, 78, 0, 196604, 9, 3, 196605, 9, 3, 196606, 9, 3, 196607, 9, 3, 131072, 9, 3, 131073, 9, 3, 131074, 9, 3, 131075, 9, 3, 131076, 9, 3, 131077, 9, 3, 131078, 9, 3, 131079, 9, 3, 131080, 9, 3, 131081, 9, 3, 131082, 9, 3, 131083, 9, 3, 131084, 9, 3, 131085, 9, 3, 131086, 9, 3, 131087, 9, 3, 262135, 78, 0, 262140, 9, 3, 262141, 9, 3, 262142, 9, 3, 262143, 9, 3, 196608, 9, 3, 196609, 9, 3, 196610, 9, 3, 196611, 9, 3, 196612, 9, 3, 196613, 9, 3, 196614, 9, 3, 196615, 9, 3, 196616, 9, 3, 196617, 9, 3, 196618, 9, 3, 196619, 9, 3, 196620, 9, 3, 196621, 9, 3, 196622, 9, 3, 196623, 9, 3, 196624, 78, 0, 327671, 78, 0, 327676, 9, 3, 327677, 9, 3, 327678, 9, 3, 327679, 9, 3, 262144, 9, 3, 262145, 9, 3, 262146, 9, 3, 262147, 9, 3, 262148, 9, 3, 262149, 9, 3, 262150, 9, 3, 262151, 9, 3, 262152, 9, 3, 262153, 9, 3, 262154, 9, 3, 262155, 9, 3, 262156, 9, 3, 262157, 9, 3, 262158, 9, 3, 262159, 9, 3, 262160, 78, 0, 393207, 78, 0, 393212, 9, 3, 393213, 9, 3, 393214, 9, 3, 393215, 9, 3, 327680, 9, 3, 327681, 9, 3, 327682, 9, 3, 327683, 9, 3, 327684, 9, 3, 327685, 9, 3, 327686, 9, 3, 327687, 9, 3, 327688, 9, 3, 327689, 9, 3, 327690, 9, 3, 327691, 9, 3, 327692, 9, 3, 327693, 9, 3, 327694, 9, 3, 327695, 9, 3, 327696, 78, 0, 458743, 78, 0, 458748, 9, 3, 458749, 9, 3, 458750, 9, 3, 458751, 9, 3, 393216, 9, 3, 393217, 9, 3, 393218, 9, 3, 393219, 9, 3, 393220, 9, 3, 393221, 9, 3, 393222, 9, 3, 393223, 9, 3, 393224, 9, 3, 393225, 9, 3, 393226, 9, 3, 393227, 9, 3, 393228, 9, 3, 393229, 9, 3, 393230, 9, 3, 393231, 9, 3, 393232, 78, 0, 524279, 78, 0, 524284, 9, 3, 524285, 9, 3, 524286, 9, 3, 524287, 9, 3, 458752, 9, 3, 458753, 9, 3, 458754, 9, 3, 458755, 9, 3, 458756, 9, 3, 458757, 9, 3, 458758, 9, 3, 458759, 9, 3, 458760, 9, 3, 458761, 9, 3, 458762, 9, 3, 458763, 9, 3, 458764, 9, 3, 458765, 9, 3, 458766, 9, 3, 458767, 9, 3, 458768, 78, 0, 589815, 78, 0, 589820, 9, 3, 589821, 9, 3, 589822, 9, 3, 589823, 9, 3, 524288, 9, 3, 524289, 9, 3, 524290, 9, 3, 524291, 9, 3, 524292, 9, 3, 524293, 9, 3, 524294, 9, 3, 524295, 9, 3, 524296, 9, 3, 524297, 9, 3, 524298, 9, 3, 524299, 9, 3, 524300, 9, 3, 524301, 9, 3, 524302, 9, 3, 524303, 9, 3, 524304, 78, 0, 655351, 78, 0, 655356, 7, 1, 655357, 7, 1, 655358, 7, 1, 655359, 7, 1, 589824, 7, 1, 589825, 7, 1, 589826, 7, 1, 589827, 7, 1, 589828, 7, 1, 589829, 7, 1, 589830, 7, 1, 589831, 7, 1, 589832, 7, 1, 589833, 7, 1, 589834, 7, 1, 589835, 7, 1, 589836, 7, 1, 589837, 7, 1, 589838, 7, 1, 589839, 7, 1, 720887, 78, 0, 720888, 78, 0, 720889, 78, 0, 720890, 78, 0, 720891, 78, 0, 720892, 78, 0, 720893, 78, 0, 720894, 78, 0, 720895, 78, 0, 655360, 78, 0, 655361, 78, 0, 655362, 78, 0, 655363, 78, 0, 655364, 78, 0, 655365, 78, 0, 655366, 78, 0, 655367, 78, 0, 655368, 78, 0, 655369, 78, 0, 655370, 78, 0, 655371, 78, 0, 655372, 78, 0, 655373, 78, 0, 655374, 78, 0, 655375, 78, 0, 655376, 78, 0, 786423, 43, 0, 786424, 43, 0, 786425, 43, 0, 786426, 43, 0, 786427, 43, 0, 786428, 43, 0, 786429, 43, 0, 786430, 43, 0, 786431, 43, 0, 720896, 43, 0, 720897, 43, 0, 720898, 43, 0, 720899, 43, 0, 720900, 43, 0, 720901, 43, 0, 720902, 43, 0, 720903, 43, 0, 720904, 43, 0, 720905, 43, 0, 720906, 43, 0, 720907, 43, 0, 720908, 43, 0, 720909, 43, 0, 720910, 43, 0, 851959, 43, 0 )

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.564706 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.929412, 1, 0.435294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -2.0
margin_right = -40.0
margin_bottom = -20.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/MarginContainer"]
margin_right = 577.0
margin_bottom = 342.0
custom_constants/separation = -92
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer3"]
margin_right = 577.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GUNSTOPPABLE"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer3"]
margin_top = 125.0
margin_right = 577.0
margin_bottom = 342.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -39
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer3/VBoxContainer2"]
margin_right = 577.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer3/VBoxContainer2/CenterContainer"]
margin_left = 163.0
margin_top = 49.0
margin_right = 413.0
margin_bottom = 166.0
custom_constants/separation = 17
alignment = 1

[node name="Button" type="TextureButton" parent="Control/MarginContainer/VBoxContainer3/VBoxContainer2/CenterContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Button3" type="TextureButton" parent="Control/MarginContainer/VBoxContainer3/VBoxContainer2/CenterContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 250.0
margin_bottom = 117.0
rect_min_size = Vector2( 200, 50 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer3/VBoxContainer2"]
margin_top = 177.0
margin_right = 577.0
margin_bottom = 217.0
custom_constants/separation = 497

[node name="Button" type="TextureButton" parent="Control/MarginContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="Button2" type="TextureButton" parent="Control/MarginContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
margin_left = 537.0
margin_right = 577.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Mouse_cursor" parent="." instance=ExtResource( 15 )]
[connection signal="button_up" from="Control/MarginContainer/VBoxContainer3/VBoxContainer2/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Control/MarginContainer/VBoxContainer3/VBoxContainer2/CenterContainer/VBoxContainer/Button3" to="." method="_on_Button3_button_up"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
